<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RadialButtons</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="undefined">Undefined</string>
    <string name="click_the_button">Click the \'Red\' button</string>

    <string name="open">Open</string>
    <string name="close">Close</string>

    <string name="red">Red</string>
    <string name="orange">Orange</string>
    <string name="yellow">Yellow</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="indigo">Indigo</string>

</resources>
