<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/btn_orange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:minWidth="75dp"
        android:minHeight="75dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:background="@drawable/states_circle_orange"
        android:clickable="true"
        android:text="@string/orange"/>
    <TextView
        android:id="@+id/btn_yellow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:minWidth="75dp"
        android:minHeight="75dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:background="@drawable/states_circle_yellow"
        android:clickable="true"
        android:text="@string/yellow"/>
    <TextView
        android:id="@+id/btn_green"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:minWidth="75dp"
        android:minHeight="75dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:background="@drawable/states_circle_green"
        android:clickable="true"
        android:text="@string/green"/>
    <TextView
        android:id="@+id/btn_blue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:minWidth="75dp"
        android:minHeight="75dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:background="@drawable/states_circle_blue"
        android:clickable="true"
        android:text="@string/blue"/>
    <TextView
        android:id="@+id/btn_indigo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:minWidth="75dp"
        android:minHeight="75dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:background="@drawable/states_circle_indigo"
        android:clickable="true"
        android:text="@string/indigo"/>

    <TextView
        android:id="@+id/btn_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:minWidth="75dp"
        android:minHeight="75dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:clickable="true"
        android:background="@drawable/states_circle_red"
        android:text="@string/red"/>

</FrameLayout>